--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #001e1d;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #001e1d;
 }
 
 body {
@@ -28,41 +28,33 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #f2f7f5;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #00473e;
+  text-align: center;
 }
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  background-color: "#f9bc60";
+  color: #001e1d;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #f9bc60;
+  background-color: #f9bc60;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  outline: 4px auto;
+  border-color: 001e1d;
 }
