--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 
 a {
   font-weight: 500;
-  color: #001e1d;
+  color: #f2f7f5;
   text-decoration: inherit;
 }
 a:hover {
@@ -28,14 +28,23 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #f2f7f5;
+  background-color: #faeee7;
+}
+
+#header {
+  text-align: center;
+  align-items: center;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: #00473e;
+  color: #33272a;
   text-align: center;
+}
+
+h2 {
+  color: #33272a;
 }
 
 button {
@@ -45,16 +54,14 @@ button {
   font-weight: 500;
   font-family: inherit;
   cursor: pointer;
-  transition: border-color 0.25s;
-  background-color: "#f9bc60";
-  color: #001e1d;
+  background-color: #ff8ba7;
 }
 button:hover {
-  border-color: #f9bc60;
-  background-color: #f9bc60;
+  background-color: #ff8ba7;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto;
   border-color: 001e1d;
+  background-color: #ff8ba7;
 }
