--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  align-items: start;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -37,9 +38,13 @@ body {
 
 #header {
   text-align: center;
-  align-items: center;
+  align-items: center, start;
   width: 95vw;
   margin: 5px;
+}
+
+#error-button {
+  color: #00473e;
 }
 
 h1 {
@@ -68,6 +73,7 @@ button {
 }
 button:hover {
   background-color: #abd1c6;
+  color: #00473e;
 }
 button:focus,
 button:focus-visible {
