--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #abd1c6;
+  min-width: 320px;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,10 +16,10 @@
 a {
   font-weight: 500;
   color: #abd1c6;
-  text-decoration: inherit;
 }
 a:hover {
-  color: #f2f7f5;
+  color: #fffffe;
+  text-decoration: inherit;
 }
 
 #user-select {
@@ -33,24 +33,24 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #f2f7f5;
+  background-color: #abd1c6;
 }
 
 #header {
   text-align: center;
   align-items: center, start;
-  width: 95vw;
+  min-width: 320px;
   margin: 5px;
 }
 
 #error-button {
-  color: #00473e;
+  color: #004643;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: #00473e;
+  color: #004643;
   text-align: center;
 }
 
@@ -69,16 +69,16 @@ button {
   font-weight: 500;
   font-family: inherit;
   cursor: pointer;
-  background-color: #00473e;
+  background-color: #004643;
 }
 button:hover {
-  background-color: #abd1c6;
-  color: #00473e;
+  background-color: #f9bc60;
+  color: #004643;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto;
-  border-color: #00473e;
+  border-color: #004643;
 }
 
 #loading {
@@ -86,9 +86,9 @@ button:focus-visible {
 }
 
 .MuiTab-textColorInherit {
-  color: #00473e;
+  color: #004643;
 }
 
 .MuiTabs-indicator {
-  color: #00473e;
+  color: #004643;
 }
